--- a/style.css
+++ b/style.css
@@ -1,12 +1,24 @@
+:root {
+    --color-primary: #1875E8;
+    --color-suva-grey: #898989;
+    --color-white: #FFFFFF;
+    --color-cyan-blue: #1354A5;
+    --color-blue-charcoal: #041832;
+    --color-black-pearl: #01080E;
+
+    --fuente-inter: 'Inter', sans-serif;
+    --fuente-chakra-petch: 'Chakra Petch', sans-serif;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    color: white;
+    color: var(--color-white);
 }
 
 body {
-    background: linear-gradient(#1354A5 0%, #041832 33.33%, #041832 66.67%, #01080E 100%);
+    background: linear-gradient(var(--color-cyan-blue) 0%, var(--color-blue-charcoal) 33.33%, var(--color-blue-charcoal) 66.67%, var(--color-black-pearl) 100%);
     height: 100vh;
     display: flex;
     align-items: center;
@@ -33,7 +45,7 @@ body::before {
     align-items: center;
     justify-content: space-between;
     border-radius: 24px;
-    border: 1px solid #1875E8;
+    border: 1px solid var(--color-primary);
     box-shadow: 4px 4px 20px 0px rgba(1, 8, 14, 0.15);
     background-image: url("img/Ruido.png");
     background-size: 100% 100%;
@@ -55,7 +67,7 @@ body::before {
 
 .container__boton {
     border-radius: 16px;
-    background: #1875E8;
+    background: var(--color-primary);
     padding: 16px 24px;
     width: 100%;
     font-size: 24px;
@@ -65,7 +77,7 @@ body::before {
 }
 
 .container__boton:disabled {
-    background: #898989;
+    background: var(--color-suva-grey);
 }
 
 .container__texto {
@@ -73,20 +85,20 @@ body::before {
 }
 
 .container__texto-azul {
-    color: #1875E8;
+    color: var(--color-primary);
 }
 
 .container__input {
     width: 100%;
     height: 72px;
     border-radius: 16px;
-    background-color: #FFF;
+    background-color: var(--color-white);
     border: none;
-    color: #1875E8;
+    color: var(--color-primary);
     padding: 2rem;
     font-size: 24px;
     font-weight: 700;
-    font-family: 'Inter', sans-serif;
+    font-family: var(--fuente-inter);
 }
 
 .container__botones {
@@ -95,7 +107,7 @@ body::before {
 }
 
 h1 {
-    font-family: 'Chakra Petch', sans-serif;
+    font-family: var(--fuente-chakra-petch);
     /* font-size: 72px; */
     font-size: 2rem;
     padding-bottom: 3rem;
@@ -103,7 +115,7 @@ h1 {
 
 p,
 button {
-    font-family: 'Inter', sans-serif;
+    font-family: var(--fuente-inter);
 }
 
 .texto__parrafo {
